--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Filip Ivković</h1>
-						<p>Software Engineering student &nbsp;&bull;&nbsp; Worthleess piece of shit &nbsp;&bull;&nbsp; Cyka Blyat</p>
+						<p>Software Engineering student &nbsp;&bull;&nbsp; Worthless piece of shit &nbsp;&bull;&nbsp; Gives u cancer</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://twitter.com/f1__dev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://facebook.com/filip.ivkovic1" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/fivkovic" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:f.ivkovic16@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
