--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Filip Ivković</h1>
-						<p>Software Engineering student &nbsp;&bull;&nbsp; Worthless piece of shit &nbsp;&bull;&nbsp; Gives u cancer</p>
+						<p>Software Engineering and Information Technologies student</p>
+						<p>Faculty of Technical Sciences</p>
+						<p>University of Novi Sad, Serbia</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/f1__dev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
