--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="https://twitter.com/f1__dev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://facebook.com/filip.ivkovic1" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<!--li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li-->
 								<li><a href="https://github.com/fivkovic" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:f.ivkovic16@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
