--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="https://twitter.com/f1__dev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://facebook.com/filip.ivkovic1" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				
-								<li><a href="https://www.meetup.com/meetup-group-ZFAICcUq/members/221473344/" class="fa fa-meetup"><span class="label">Meetup</span></a></li>
+								<li><a href="https://www.meetup.com/meetup-group-ZFAICcUq/members/221473344/" class="icon fa-meetup"><span class="label">Meetup</span></a></li>
 								<li><a href="https://github.com/fivkovic" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:f.ivkovic16@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
