--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
 				<!-- Header -->
 					<header id="header">
+
+					<div class="top">
+
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+
 						<h1>Filip Ivković</h1>
 						<p>Software Engineering and Information Technologies student</p>
 						<p>Faculty of Technical Sciences</p>
