--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<!-- Header -->
 					<header id="header">
 
-						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+						<h2>Avatar</h2>
+						<img src="avatar.jpg" alt="Avatar" style="width:48px;height:48px;">
 
 						<h1>Filip Ivković</h1>
 						<p>Software Engineering and Information Technologies student</p>
