--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<header id="header">
 
 						<h2>Avatar</h2>
-						<img src="images/avatar.jpg" alt="Avatar" style="width:48px;height:48px;">
+						<img src="/images/avatar.jpg" alt="Avatar" style="width:48px;height:48px;">
 
 						<h1>Filip Ivković</h1>
 						<p>Software Engineering and Information Technologies student</p>
