--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<!-- Header -->
 					<header id="header">
 
-						<h2>Avatar</h2>
-						<img src="/images/avatar.jpg" alt="Avatar" style="width:48px;height:48px;">
+						
+						<img src="/images/avatar.png" alt="Avatar" style="width:591px;height:602px;">
 
 						<h1>Filip Ivković</h1>
 						<p>Software Engineering and Information Technologies student</p>
