--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Filip Ivković. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; Filip Ivković. Design: Filip Ivković.</span>
 					</footer>
 
 			</div>
